bk_ida/gccida/g2/assemble_string
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_string/src/varasm.c:1820:6: error: use of undeclared identifier 'byte_709338'
v9 = byte_709338[v8]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_string/src/varasm.c:1873:7: error: use of undeclared identifier 'byte_709338'
v12 = byte_709338[v11]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_string/src/obj/varasm.o] Error 1
